fix form input color on dark mode

--- a/ui/src/components/upload/Upload.scss
+++ b/ui/src/components/upload/Upload.scss
@@ -16,6 +16,7 @@
       line-height: 16px;
       border-radius: 8px;
       padding: 0 4px;
+      font-size: 12px;
     }
     .caption {
       color: var(--ns-neutral--20);
